tests/TypingSpec/valid/prog/case-data-wildcard-2.algst
data List a = Cons a (List a) | Nil

unsafe_head : ∀(a:TU). List a -> a
unsafe_head [a] xs = case xs of {
  Cons a _ -> a,
  xs' -> unsafe_head [a] xs'
}
